--- a/CellSpell/MainWindow.xaml
+++ b/CellSpell/MainWindow.xaml
@@ -7,6 +7,16 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="40"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+
+        </Grid.ColumnDefinitions>
+        <TextBox Grid.Row="0" Grid.RowSpan="1" Text="example.com" FontSize="20" TextAlignment="Center" Padding="5"></TextBox>
+        <DataGrid Grid.Row="1" Grid.RowSpan="1"></DataGrid>
+        <Button Content="Pobierz" Grid.Row="2" Grid.RowSpan="1"></Button>
     </Grid>
 </Window>
