--- a/CellSpell/MainWindow.xaml
+++ b/CellSpell/MainWindow.xaml
@@ -13,10 +13,14 @@
             <RowDefinition Height="40"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <TextBox Name="UrlBox" Grid.Row="0" Grid.RowSpan="1" Text="example.com" FontSize="20" TextAlignment="Center" Padding="5"></TextBox>
-        <TextBox Name="OutputBox" Grid.Row="1" Grid.RowSpan="1" HorizontalScrollBarVisibility="Visible"></TextBox>
+        <TextBox Name="UrlBox" Grid.Row="0" Grid.RowSpan="1" Grid.ColumnSpan="4" Text="example.com" FontSize="20" TextAlignment="Center" Padding="5"></TextBox>
+        <ListBox Name="RawOutputBox" Grid.Row="1" Grid.Column="1" Grid.RowSpan="1" ></ListBox>
+        <ListBox Name="ModifiedOutputBox" Grid.Row="1" Grid.Column="2" Grid.RowSpan="1" ></ListBox>
         <Button Content="Pobierz" Grid.Row="2" Grid.RowSpan="1" Click="Pobierz"></Button>
     </Grid>
 </Window>
