--- a/CellSpell/MainWindow.xaml
+++ b/CellSpell/MainWindow.xaml
@@ -19,7 +19,13 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <TextBox Name="UrlBox" Grid.Row="0" Grid.RowSpan="1" Grid.ColumnSpan="4" Text="example.com" FontSize="20" TextAlignment="Center" Padding="5"></TextBox>
-        <ListBox Name="RawOutputBox" Grid.Row="1" Grid.Column="1" Grid.RowSpan="1" ></ListBox>
+        <ListBox Name="RawOutputBox" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.Row="1" Grid.Column="1" Grid.RowSpan="1" >
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding}" TextWrapping="Wrap"/>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
         <ListBox Name="ModifiedOutputBox" Grid.Row="1" Grid.Column="2" Grid.RowSpan="1" ></ListBox>
         <Button Content="Pobierz" Grid.Row="2" Grid.RowSpan="1" Click="Pobierz"></Button>
     </Grid>
