--- a/CellSpell/MainWindow.xaml
+++ b/CellSpell/MainWindow.xaml
@@ -5,9 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CellSpell"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        WindowState="Maximized">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="40"></RowDefinition>
             <RowDefinition Height="40"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="40"></RowDefinition>
@@ -18,17 +20,19 @@
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <TextBox Name="UrlBox" Grid.Row="0" Grid.RowSpan="1" Grid.ColumnSpan="4" Text="example.com" FontSize="20" TextAlignment="Center" Padding="5"></TextBox>
-        <ListBox Name="RawOutputBox" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.Row="1" Grid.Column="1" Grid.RowSpan="1" >
+        <TextBox Name="UrlBox" Grid.Row="0" Grid.RowSpan="1" Grid.ColumnSpan="4" Text="example.com" FontSize="17" TextAlignment="Center" Padding="5"></TextBox>
+        <TextBox Name="RegexBox" Grid.Row="1" Grid.RowSpan="1" Grid.ColumnSpan="4" Text="regex" FontSize="17" TextAlignment="Center" Padding="5"></TextBox>
+        <ListBox Name="URLListBox" Grid.Row="2" Grid.Column="0"></ListBox>
+        <ListBox Name="RawOutputBox" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.Row="2" Grid.Column="1" Grid.RowSpan="1" >
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding}" TextWrapping="Wrap"/>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <ListBox Name="ModifiedOutputBox" Grid.Row="1" Grid.Column="2" Grid.RowSpan="1" ></ListBox>
-        <TextBox Name="PythonScriptBox" Grid.Row="1" Grid.Column="3" Grid.RowSpan="1" TextWrapping="Wrap" MaxLines="20" AcceptsReturn="True" AcceptsTab="True"></TextBox>
-        <Button Content="Pobierz" Grid.Row="2" Grid.RowSpan="1" Click="Pobierz"></Button>
-        <Button Content="Wykonaj" Grid.Row="2" Grid.RowSpan="1" Grid.Column="3" Click="Wykonaj"></Button>
+        <ListBox Name="ModifiedOutputBox" Grid.Row="2" Grid.Column="2" Grid.RowSpan="1"></ListBox>
+        <TextBox Name="PythonScriptBox" Grid.Row="2" Grid.Column="3" Grid.RowSpan="1" TextWrapping="Wrap" MaxLines="20" AcceptsReturn="True" AcceptsTab="True"></TextBox>
+        <Button Content="Pobierz" Grid.Row="3" Grid.RowSpan="1" Click="Pobierz"></Button>
+        <Button Content="Wykonaj" Grid.Row="3" Grid.RowSpan="1" Grid.Column="3" Click="Wykonaj"></Button>
     </Grid>
 </Window>
